# cmake-precompiled-header-example

./: CMakeLists.txt  README.md  build.sh  main.cpp  someheader.h
